--- a/scripts.Hugo/Makefile
+++ b/scripts.Hugo/Makefile
@@ -40,6 +40,7 @@ regenX:
 	[ -d themes ] || echo "you should run : git clone https://marstool@github.com/marstool/themes.git"
 	cd themes && git pull
 	rm -fr public/*
+	rm -fr resources/_gen/*
 	cp ../CNAME public/
 	[ -f public/CNAME ] || ( echo ; echo "why no CNAME ? exit" ; echo ; exit 32 )
 	nice -n 19 hugo
